dark mode bg fix

--- a/itis3135/projects/client/styles/darkmode.css
+++ b/itis3135/projects/client/styles/darkmode.css
@@ -22,6 +22,11 @@
   height: auto;
 }
 
+body {
+  background-color: #111;
+  color: #fff;
+}
+
 nav a {
   margin-left: 40px;
   text-decoration: none;
